[package]
name = "chattium-oxide-server"
description = "Chat server for chattium-oxide-client"
repository = "https://github.com/nabijaczleweli/chattium-oxide-server"
readme = "README.md"
keywords = ["chattium-oxide", "chat"]
license = "MIT"
# Remember to update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]


[dependencies]
chattium_oxide_lib = { git = "https://github.com/nabijaczleweli/chattium-oxide-lib.git" }
yaml_file_handler = "0.1"
lazy_static = "0.2"
base64 = "0.2"
regex = "0.1"
hyper = "0.9"
clap = "2.11"
time = "0.1"
